# dicom-test

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
src/: DicomSeriesLoader.cpp  DicomSeriesLoader.h  ImageViewerWidget.cpp  ImageViewerWidget.h  MainWindow.cpp  MainWindow.h  StudyManager.cpp  StudyManager.h  main.cpp
tests/: CMakeLists.txt  test_load.cpp  test_measure.cpp  test_sync.cpp
